src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "'auto'", "'integer'", "'void'", 
                     "'array'", "'break'", "'float'", "'return'", "'out'", 
                     "'boolean'", "'string'", "'for'", "'continue'", "'do'", 
                     "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", 
                     "'||'", "'!'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'::'", "';'", "':'", "'='", "','", "'.'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LINE_COMMENT", 
                      "LINES_COMMENT", "AUTO", "INT", "VOID", "ARRAY", "BREAK", 
                      "FLOAT", "RETURN", "OUT", "BOOLEAN", "STRING", "FOR", 
                      "CONTINUE", "DO", "FUNCTION", "OF", "ELSE", "IF", 
                      "WHILE", "INHERIT", "ADDOP", "SUBOP", "MULOP", "DIVOP", 
                      "MODOP", "ANDOP", "OROP", "NOTOP", "GTOP", "SMOP", 
                      "GTEOP", "SMEOP", "EQCOP", "NOTEQOP", "CONCATOP", 
                      "SM", "COLON", "EQ", "CM", "DOT", "LB", "RB", "LS", 
                      "RS", "LP", "RP", "INTLIT", "FLOATLIT", "TRUE", "FALSE", 
                      "STRINGLIT", "ID", "WS", "UNCLOSE_STRING_1", "UNCLOSE_STRING_2", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardeclnoinit = 4
    RULE_vardeclinit = 5
    RULE_funcdecl = 6
    RULE_paramlist = 7
    RULE_params = 8
    RULE_param = 9
    RULE_functyp = 10
    RULE_expr = 11
    RULE_relationalExpr = 12
    RULE_relationalOpt = 13
    RULE_logicalExpr = 14
    RULE_logicalOpt = 15
    RULE_addExpr = 16
    RULE_addOpt = 17
    RULE_multiExpr = 18
    RULE_multiOpt = 19
    RULE_unaryLogicalExpr = 20
    RULE_signExpr = 21
    RULE_indexOptExpr = 22
    RULE_subexpr = 23
    RULE_callexpr = 24
    RULE_stmt = 25
    RULE_assignstmt = 26
    RULE_ifstmt = 27
    RULE_forstmt = 28
    RULE_initexpr = 29
    RULE_conditionexpr = 30
    RULE_updateexpr = 31
    RULE_whilestmt = 32
    RULE_dowhilestmt = 33
    RULE_breakstmt = 34
    RULE_continuestmt = 35
    RULE_returnstmt = 36
    RULE_callstmt = 37
    RULE_blockstmt = 38
    RULE_blockstmtbody = 39
    RULE_declandstmts = 40
    RULE_declandstmt = 41
    RULE_scalarvar = 42
    RULE_nonullexprlist = 43
    RULE_nullexprlist = 44
    RULE_idlist = 45
    RULE_typ = 46
    RULE_arraytyp = 47
    RULE_intList = 48
    RULE_intandexpr = 49
    RULE_alllit = 50
    RULE_arrayLit = 51
    RULE_arrayElements = 52
    RULE_alllits = 53
    RULE_specialFunc = 54
    RULE_readInt = 55
    RULE_printInt = 56
    RULE_readFloat = 57
    RULE_writeFloat = 58
    RULE_readBoolean = 59
    RULE_printBoolean = 60
    RULE_readString = 61
    RULE_printString = 62
    RULE_superFunc = 63
    RULE_preventDefault = 64

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "vardeclnoinit", 
                   "vardeclinit", "funcdecl", "paramlist", "params", "param", 
                   "functyp", "expr", "relationalExpr", "relationalOpt", 
                   "logicalExpr", "logicalOpt", "addExpr", "addOpt", "multiExpr", 
                   "multiOpt", "unaryLogicalExpr", "signExpr", "indexOptExpr", 
                   "subexpr", "callexpr", "stmt", "assignstmt", "ifstmt", 
                   "forstmt", "initexpr", "conditionexpr", "updateexpr", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "returnstmt", "callstmt", "blockstmt", "blockstmtbody", 
                   "declandstmts", "declandstmt", "scalarvar", "nonullexprlist", 
                   "nullexprlist", "idlist", "typ", "arraytyp", "intList", 
                   "intandexpr", "alllit", "arrayLit", "arrayElements", 
                   "alllits", "specialFunc", "readInt", "printInt", "readFloat", 
                   "writeFloat", "readBoolean", "printBoolean", "readString", 
                   "printString", "superFunc", "preventDefault" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    LINE_COMMENT=11
    LINES_COMMENT=12
    AUTO=13
    INT=14
    VOID=15
    ARRAY=16
    BREAK=17
    FLOAT=18
    RETURN=19
    OUT=20
    BOOLEAN=21
    STRING=22
    FOR=23
    CONTINUE=24
    DO=25
    FUNCTION=26
    OF=27
    ELSE=28
    IF=29
    WHILE=30
    INHERIT=31
    ADDOP=32
    SUBOP=33
    MULOP=34
    DIVOP=35
    MODOP=36
    ANDOP=37
    OROP=38
    NOTOP=39
    GTOP=40
    SMOP=41
    GTEOP=42
    SMEOP=43
    EQCOP=44
    NOTEQOP=45
    CONCATOP=46
    SM=47
    COLON=48
    EQ=49
    CM=50
    DOT=51
    LB=52
    RB=53
    LS=54
    RS=55
    LP=56
    RP=57
    INTLIT=58
    FLOATLIT=59
    TRUE=60
    FALSE=61
    STRINGLIT=62
    ID=63
    WS=64
    UNCLOSE_STRING_1=65
    UNCLOSE_STRING_2=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.decllist()
            self.state = 131
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.decl()
                self.state = 134
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclnoinit(self):
            return self.getTypedRuleContext(MT22Parser.VardeclnoinitContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def vardeclinit(self):
            return self.getTypedRuleContext(MT22Parser.VardeclinitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.vardeclnoinit()
                self.state = 144
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.vardeclinit()
                self.state = 147
                self.match(MT22Parser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclnoinitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclnoinit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclnoinit" ):
                return visitor.visitVardeclnoinit(self)
            else:
                return visitor.visitChildren(self)




    def vardeclnoinit(self):

        localctx = MT22Parser.VardeclnoinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardeclnoinit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.idlist()
            self.state = 152
            self.match(MT22Parser.COLON)
            self.state = 153
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclinitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def vardeclinit(self):
            return self.getTypedRuleContext(MT22Parser.VardeclinitContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclinit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclinit" ):
                return visitor.visitVardeclinit(self)
            else:
                return visitor.visitChildren(self)




    def vardeclinit(self):

        localctx = MT22Parser.VardeclinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardeclinit)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(MT22Parser.ID)
                self.state = 156
                self.match(MT22Parser.CM)
                self.state = 157
                self.vardeclinit()
                self.state = 158
                self.match(MT22Parser.CM)
                self.state = 159
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(MT22Parser.ID)
                self.state = 162
                self.match(MT22Parser.COLON)
                self.state = 163
                self.typ()
                self.state = 164
                self.match(MT22Parser.EQ)
                self.state = 165
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def functyp(self):
            return self.getTypedRuleContext(MT22Parser.FunctypContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(MT22Parser.ID)
            self.state = 170
            self.match(MT22Parser.COLON)
            self.state = 171
            self.match(MT22Parser.FUNCTION)
            self.state = 172
            self.functyp()
            self.state = 173
            self.match(MT22Parser.LB)
            self.state = 174
            self.paramlist()
            self.state = 175
            self.match(MT22Parser.RB)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 176
                self.match(MT22Parser.INHERIT)
                self.state = 177
                self.match(MT22Parser.ID)


            self.state = 180
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramlist)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.params()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = MT22Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.param()
                self.state = 187
                self.match(MT22Parser.CM)
                self.state = 188
                self.params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 193
                self.match(MT22Parser.INHERIT)


            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 196
                self.match(MT22Parser.OUT)


            self.state = 199
            self.match(MT22Parser.ID)
            self.state = 200
            self.match(MT22Parser.COLON)
            self.state = 201
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_functyp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctyp" ):
                return visitor.visitFunctyp(self)
            else:
                return visitor.visitChildren(self)




    def functyp(self):

        localctx = MT22Parser.FunctypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functyp)
        try:
            self.state = 205
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.INT, MT22Parser.ARRAY, MT22Parser.FLOAT, MT22Parser.BOOLEAN, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 203
                self.typ()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 204
                self.match(MT22Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.RelationalExprContext)
            else:
                return self.getTypedRuleContext(MT22Parser.RelationalExprContext,i)


        def CONCATOP(self):
            return self.getToken(MT22Parser.CONCATOP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = MT22Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        try:
            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.relationalExpr()
                self.state = 208
                self.match(MT22Parser.CONCATOP)
                self.state = 209
                self.relationalExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.relationalExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.LogicalExprContext)
            else:
                return self.getTypedRuleContext(MT22Parser.LogicalExprContext,i)


        def relationalOpt(self):
            return self.getTypedRuleContext(MT22Parser.RelationalOptContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_relationalExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)




    def relationalExpr(self):

        localctx = MT22Parser.RelationalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_relationalExpr)
        try:
            self.state = 219
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 214
                self.logicalExpr(0)
                self.state = 215
                self.relationalOpt()
                self.state = 216
                self.logicalExpr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 218
                self.logicalExpr(0)
                pass

